# eng_calcs_RD2229

./: .gitignore  COMPLETAMENTO_SISTEMA_MATERIALI.md  QUICK_START.md  README.md  SISTEMA_MATERIALI_COMPLETO.md  VALIDAZIONE_ESECUZIONE.md  app.py  app_compact.py  app_materiali_completi.py  app_pro.py  gui_calcolo_calcestruzzo_santarella.py  gui_tabelle_rd2229.py  gui_verifiche_complete.py  gui_windows.py  libreria_materiali.json  pyproject.toml  requirements.txt  test_esecuzione.py  test_rd2229.py  test_sistema_materiali.py
.github/: copilot-instructions.md
config/: pilastro_esempio.yaml  trave_esempio.yaml
data/: pilastri_esempio.csv  travi_esempio.csv
docs/: COMPLETAMENTO.md  DATI_STORICI_RD2229.md  NUOVE_SEZIONI.md  TABELLA_III_MALTA.md  guida_utente.md
examples/: esempio_dati_storici_rd2229.py  esempio_nuove_sezioni.py  esempio_tabella_malta.py  esempio_trave.py
src/verifiche_dm1939/: __init__.py  cli.py  tabelle_interactive.py
src/verifiche_dm1939/core/: __init__.py  config.py  conversioni_unita.py  dati_storici_rd2229.py  materiali_storici_completi.py  tabella_malta.py
src/verifiche_dm1939/io_handlers/: __init__.py  csv_handler.py
src/verifiche_dm1939/materials/: __init__.py  acciaio.py  calcestruzzo.py
src/verifiche_dm1939/reporting/: __init__.py  grafici.py  report_generator.py
src/verifiche_dm1939/sections/: __init__.py  sezione_base.py  sezione_circolare.py  sezione_i.py  sezione_rettangolare.py  sezione_rettangolare_new.py  sezione_t.py  sezioni_speciali.py
src/verifiche_dm1939/verifications/: __init__.py  verifica_flessione.py  verifica_pressoflessione.py  verifica_taglio.py
tests/: test_validazione.py
